# parallel_works

MPI_projects/task1/: CMakeLists.txt  main.cpp
MPI_projects/task2/: CMakeLists.txt  main.cpp
MPI_projects/task3/: CMakeLists.txt  main.cpp
MPI_projects/task4/: CMakeLists.txt  main.cpp
MPI_projects/task5/: CMakeLists.txt  main.cpp
MPI_projects/task6/: CMakeLists.txt  main.cpp
OpenMP/: CMakeLists.txt  main.cpp
